syntax = "proto3";
package feast.core;


option java_outer_classname = "FeatureProto";
option java_package = "dev.caraml.store.protobuf.core";

import "feast/types/Value.proto";

message FeatureSpec {
    // Name of the feature. Not updatable.
    string name = 1;

    // Value type of the feature. Not updatable.
    feast.types.ValueType.Enum value_type = 2;

    // Labels for user defined metadata on a feature
    map<string,string> labels = 3;
}
